backport: re PR c++/68184 (Exception from a virtual function does not get caught)

2015-12-16  Richard Biener  <rguenther@suse.de>

	Backport from mainline
	2015-12-02  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/68184
	* cgraphunit.c (cgraph_node::analyze): Set can_throw_external.
 
	* g++.dg/torture/pr68184.C: New testcase.

From-SVN: r231677